# hatenanyan

./: AquesTalk.h  auth.json  data.json  db.json  htmlメモ  keep_alive.py  level.json  main.py  memo  mescount.json  money.json  pyproject.toml  readme.txt  talk  weakup.py  youtube-HxnsN4_qbHM-_.m4a  youtube-kB-CbPqyymE-www.m4a
Function/: help.py  slash.py
adminonly/: debug.py
cogs/: .draw  Authentication.py  Block.py  NGwords.py  News.py  TTS.py  Twitter.py  auth.py  button.py  defult.py  game.py  google.py  help.py  level.py  level.txt  leveling.py  log.py  message_count.py  messagecount.py  music.py  mychannels.py  option.ini  ping.py  qrcode.py  reaction.py  slashcommand.py  spamtest.py  translate.py  url_info.py  users.py  weakup.py  welcome.py  wolf.py  yomi.py
cogs/Newslogs/: yahoo_log.txt
cogs/txtfiles/: Blockinglist.json  NGwords.json  NGwords.txt  wolfplayer.json
static/css/: style.css
templates/: about.html  diary.html  form.html  help.html  html_back_up.txt  index.html  layout.html  news.html  nhk.html  status.html  verifed.html  verify.html  yahoo.html
