[tool.poetry]
name = "yi-wen-mao-botgai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2021.1"
replit = "^3.0.0"
youtube-dl = "^2021.4.7"
aiofile = "^3.5.0"
discord = "^1.0.1"
feedparser = "^6.0.2"
flask = "^1.1.2"
discord-py-slash-command = "^1.1.2"
PyNaCl = "^1.4.0"
php = "^1.2.1"
sql = "^0.4.0"
jishaku = "^1.20.0"
asyncpg = "^0.22.0"
gtts = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
