[tool.poetry]
name = "repl_python3_Yi-Wen-Mao-BotGai"
version = "0.1.0"
description = ""
authors = ["kousakirai <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube-dl = "^2021.5.16"
aiofile = "^3.5.0"
discord = "^1.0.1"
feedparser = "^6.0.2"
flask = "^2.0.1"
pytz = "^2021.1"
tinydb = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
