[tool.poetry]
name = "repl_python3_hatenaBot"
version = "0.1.0"
description = ""
authors = ["kousakirai <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
gTTS = "^2.2.3"
tinydb = "^4.5.0"
aiohttp = "^3.7.4"
youtube_dl = "^2021.6.6"
psutil = "^5.8.0"
bs4 = "^0.0.1"
discord = "^1.7.3"
aiofile = "^3.5.1"
feedparser = "^6.0.8"
Flask = "^2.0.1"
Flask-Limiter = "^1.4"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
